Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,3 +4,10 @@
 	inheritFrom = openbmc-c-repos
 [submit]
 	action = rebase if necessary
+[access "refs/heads/*"]
+	label-Code-Review = -2..+2 group user/Andrew Jeffery (amboar)
+	label-Code-Review = -2..+2 group user/Cyril Bur (cyrilbur-ibm)
+	label-Ok-To-Test = +0..+1 group user/Andrew Jeffery (amboar)
+	label-Ok-To-Test = +0..+1 group user/Cyril Bur (cyrilbur-ibm)
+	label-Verified = -1..+1 group user/Andrew Jeffery (amboar)
+	label-Verified = -1..+1 group user/Cyril Bur (cyrilbur-ibm)
