--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,10 @@
 ACLOCAL_AMFLAGS = -I m4
-sbin_PROGRAMS = mboxd
+sbin_PROGRAMS = mboxd mboxctl
 
 mboxd_SOURCES = mboxd.c common.c
-mboxd_LDFLAGS = $(SYSTEMD_LIBS)
-mboxd_CFLAGS = $(SYSTEMD_CFLAGS)
+mboxd_LDFLAGS = $(LIBSYSTEMD_LIBS)
+mboxd_CFLAGS = $(LIBSYSTEMD_CFLAGS)
+
+mboxctl_SOURCES = mboxctl.c
+mboxctl_LDFLAGS = $(LIBSYSTEMD_LIBS)
+mboxctl_CFLAGS = $(LIBSYSTEMD_CFLAGS)
