test: Add copy_flash
Change-Id: Iac6b6207c01f1db322803218231ca97c210a583c
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,3 +14,9 @@ mboxctl_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 AM_LIBS = $(CODE_COVERAGE_LIBS)
 AM_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS)
 AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
+
+test_copy_flash_SOURCES = test/copy_flash.c mboxd_flash.c common.c mtd.c test/tmpf.c
+
+check_PROGRAMS = test/copy_flash
+
+TESTS = $(check_PROGRAMS)
