--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,10 @@ test_sanity_SOURCES = test/sanity.c
 
 test_copy_flash_SOURCES = test/copy_flash.c mboxd_flash.c common.c mtd.c test/tmpf.c
 
+test_erase_flash_SOURCES = test/erase_flash.c mboxd_flash.c common.c test/tmpf.c
+
 check_PROGRAMS = test/sanity \
-		test/copy_flash
+		test/copy_flash \
+		test/erase_flash
 
 TESTS = $(check_PROGRAMS)
