--- a/Makefile.am
+++ b/Makefile.am
@@ -17,6 +17,8 @@ AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
 
 test_copy_flash_SOURCES = test/copy_flash.c mboxd_flash.c common.c mtd.c test/tmpf.c
 
-check_PROGRAMS = test/copy_flash
+test_erase_flash_SOURCES = test/erase_flash.c mboxd_flash.c common.c test/tmpf.c
+
+check_PROGRAMS = test/copy_flash test/erase_flash
 
 TESTS = $(check_PROGRAMS)
