--- a/Makefile.am
+++ b/Makefile.am
@@ -21,8 +21,11 @@ test_copy_flash_SOURCES = test/copy_flash.c mboxd_flash.c common.c mtd.c test/tm
 
 test_erase_flash_SOURCES = test/erase_flash.c mboxd_flash.c common.c test/tmpf.c
 
+test_write_flash_SOURCES = test/write_flash.c mboxd_flash.c common.c test/tmpf.c
+
 check_PROGRAMS = test/sanity \
 		test/copy_flash \
-		test/erase_flash
+		test/erase_flash \
+		test/write_flash
 
 TESTS = $(check_PROGRAMS)
