--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,16 @@ test_erase_flash_SOURCES = test/erase_flash.c mboxd_flash.c common.c test/tmpf.c
 
 test_write_flash_SOURCES = test/write_flash.c mboxd_flash.c common.c test/tmpf.c
 
-check_PROGRAMS = test/copy_flash test/erase_flash test/write_flash
+TEST_MBOX_SRCS = mboxd_msg.c mboxd_windows.c mboxd_lpc.c mboxd_flash.c common.c
+TEST_MOCK_SRCS = test/tmpf.c test/mbox.c test/system.c
+
+test_get_mbox_info_v2_SOURCES = test/get_mbox_info_v2.c \
+				$(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
+check_PROGRAMS = test/copy_flash \
+		 test/erase_flash \
+		 test/write_flash \
+		 test/reset_state \
+		 test/get_mbox_info_v2
 
 TESTS = $(check_PROGRAMS)
