test: Add reset_state
Change-Id: Ia18a5e7c472d8fe55fb90a13be21f731e407e6e9
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,6 +27,9 @@ TEST_MOCK_SRCS = test/tmpf.c test/mbox.c test/system.c
 test_get_mbox_info_v2_SOURCES = test/get_mbox_info_v2.c \
 				$(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_reset_state_SOURCES = test/reset_state.c \
+			   $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
