--- a/Makefile.am
+++ b/Makefile.am
@@ -32,11 +32,15 @@ test_get_mbox_info_v2_SOURCES = test/get_mbox_info_v2.c \
 test_reset_state_SOURCES = test/reset_state.c \
 			   $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_get_flash_info_v2_SOURCES = test/get_flash_info_v2.c \
+				 $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
 		 test/get_mbox_info_v2 \
-		 test/reset_state
+		 test/reset_state \
+		 test/get_flash_info_v2
 
 TESTS = $(check_PROGRAMS)
