--- a/Makefile.am
+++ b/Makefile.am
@@ -35,12 +35,16 @@ test_reset_state_SOURCES = test/reset_state.c \
 test_get_flash_info_v2_SOURCES = test/get_flash_info_v2.c \
 				 $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_create_read_window_v2_SOURCES = test/create_read_window_v2.c \
+				     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
 		 test/get_mbox_info_v2 \
 		 test/reset_state \
-		 test/get_flash_info_v2
+		 test/get_flash_info_v2 \
+		 test/create_read_window_v2
 
 TESTS = $(check_PROGRAMS)
