--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,8 @@ test_write_flash_SOURCES = test/write_flash.c mboxd_flash.c common.c test/tmpf.c
 test_get_mbox_info_v2_SOURCES = test/get_mbox_info_v2.c mboxd_msg.c mboxd_windows.c mboxd_lpc.c mboxd_flash.c common.c test/tmpf.c test/mbox.c test/system.c
 test_reset_state_SOURCES = test/reset_state.c mboxd_msg.c mboxd_windows.c mboxd_lpc.c mboxd_flash.c common.c test/tmpf.c test/mbox.c test/system.c
 test_get_flash_info_v2_SOURCES = test/get_flash_info_v2.c mboxd_msg.c mboxd_windows.c mboxd_lpc.c mboxd_flash.c common.c test/tmpf.c test/mbox.c test/system.c
+test_create_read_window_v2_SOURCES = test/create_read_window_v2.c mboxd_msg.c mboxd_windows.c mboxd_lpc.c mboxd_flash.c common.c test/tmpf.c test/mbox.c test/system.c
 
-check_PROGRAMS = test/copy_flash test/erase_flash test/write_flash test/get_mbox_info_v2 test/reset_state test/get_flash_info_v2
+check_PROGRAMS = test/copy_flash test/erase_flash test/write_flash test/get_mbox_info_v2 test/reset_state test/get_flash_info_v2 test/create_read_window_v2
 
 TESTS = $(check_PROGRAMS)
