test: Add close_window_v2
Change-Id: I2ca90440333f1b06c408884f59af22ab0f9c596d
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,8 @@ test_reset_state_SOURCES = test/reset_state.c mboxd_msg.c mboxd_windows.c mboxd_
 test_get_flash_info_v2_SOURCES = test/get_flash_info_v2.c mboxd_msg.c mboxd_windows.c mboxd_lpc.c mboxd_flash.c common.c test/tmpf.c test/mbox.c test/system.c
 test_create_read_window_v2_SOURCES = test/create_read_window_v2.c mboxd_msg.c mboxd_windows.c mboxd_lpc.c mboxd_flash.c common.c test/tmpf.c test/mbox.c test/system.c
 test_create_write_window_v2_SOURCES = test/create_write_window_v2.c mboxd_msg.c mboxd_windows.c mboxd_lpc.c mboxd_flash.c common.c test/tmpf.c test/mbox.c test/system.c
+test_close_window_v2_SOURCES = test/close_window_v2.c mboxd_msg.c mboxd_windows.c mboxd_lpc.c mboxd_flash.c common.c test/tmpf.c test/mbox.c test/system.c
 
-check_PROGRAMS = test/copy_flash test/erase_flash test/write_flash test/get_mbox_info_v2 test/reset_state test/get_flash_info_v2 test/create_read_window_v2 test/create_write_window_v2
+check_PROGRAMS = test/copy_flash test/erase_flash test/write_flash test/get_mbox_info_v2 test/reset_state test/get_flash_info_v2 test/create_read_window_v2 test/create_write_window_v2 test/close_window_v2
 
 TESTS = $(check_PROGRAMS)
