test: Add close_window_v2
Change-Id: I2ca90440333f1b06c408884f59af22ab0f9c596d
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -41,6 +41,9 @@ test_create_read_window_v2_SOURCES = test/create_read_window_v2.c \
 test_create_write_window_v2_SOURCES = test/create_write_window_v2.c \
 				      $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_close_window_v2_SOURCES = test/close_window_v2.c \
+			       $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
@@ -49,6 +52,7 @@ check_PROGRAMS = test/sanity \
 		 test/reset_state \
 		 test/get_flash_info_v2 \
 		 test/create_read_window_v2 \
-		 test/create_write_window_v2
+		 test/create_write_window_v2 \
+		 test/close_window_v2
 
 TESTS = $(check_PROGRAMS)
