--- a/Makefile.am
+++ b/Makefile.am
@@ -39,6 +39,9 @@ test_create_read_window_v2_SOURCES = test/create_read_window_v2.c \
 test_create_write_window_v2_SOURCES = test/create_write_window_v2.c \
 				      $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_close_window_v2_SOURCES = test/close_window_v2.c \
+			       $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
@@ -46,6 +49,7 @@ check_PROGRAMS = test/copy_flash \
 		 test/get_mbox_info_v2 \
 		 test/get_flash_info_v2 \
 		 test/create_read_window_v2 \
-		 test/create_write_window_v2
+		 test/create_write_window_v2 \
+		 test/close_window_v2
 
 TESTS = $(check_PROGRAMS)
