test: Add write_flush_v2
Change-Id: I567be3c016f6d96bb5e7b36342e162dfdff2f836
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,6 +47,9 @@ test_close_window_v2_SOURCES = test/close_window_v2.c \
 test_mark_write_dirty_v2_SOURCES = test/mark_write_dirty_v2.c \
 				   $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_write_flush_v2_SOURCES = test/write_flush_v2.c \
+			      $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
@@ -57,6 +60,7 @@ check_PROGRAMS = test/sanity \
 		 test/create_read_window_v2 \
 		 test/create_write_window_v2 \
 		 test/close_window_v2 \
-		 test/mark_write_dirty_v2
+		 test/mark_write_dirty_v2 \
+		 test/write_flush_v2
 
 TESTS = $(check_PROGRAMS)
