test: Add mark_write_erased_v2
Change-Id: I74f98b63f9971b53a90b4cc8e81ebeddaec1431d
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -48,6 +48,9 @@ test_mark_write_dirty_v2_SOURCES = test/mark_write_dirty_v2.c \
 test_write_flush_v2_SOURCES = test/write_flush_v2.c \
 			      $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_mark_write_erased_v2_SOURCES = test/mark_write_erased_v2.c \
+				    $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
@@ -58,6 +61,7 @@ check_PROGRAMS = test/copy_flash \
 		 test/create_write_window_v2 \
 		 test/close_window_v2 \
 		 test/mark_write_dirty_v2 \
-		 test/write_flush_v2
+		 test/write_flush_v2 \
+		 test/mark_write_erased_v2
 
 TESTS = $(check_PROGRAMS)
