--- a/Makefile.am
+++ b/Makefile.am
@@ -50,6 +50,9 @@ test_mark_write_dirty_v2_SOURCES = test/mark_write_dirty_v2.c \
 test_write_flush_v2_SOURCES = test/write_flush_v2.c \
 			      $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_mark_write_erased_v2_SOURCES = test/mark_write_erased_v2.c \
+				    $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
@@ -61,6 +64,7 @@ check_PROGRAMS = test/sanity \
 		 test/create_write_window_v2 \
 		 test/close_window_v2 \
 		 test/mark_write_dirty_v2 \
-		 test/write_flush_v2
+		 test/write_flush_v2 \
+		 test/mark_write_erased_v2
 
 TESTS = $(check_PROGRAMS)
