autotools: Add code coverage support
Change-Id: I7d11c64ffa3e68973081cfb1f3fdc1817a64e8cd
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,3 +8,9 @@ mboxd_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 mboxctl_SOURCES = mboxctl.c
 mboxctl_LDFLAGS = $(LIBSYSTEMD_LIBS)
 mboxctl_CFLAGS = $(LIBSYSTEMD_CFLAGS)
+
+@CODE_COVERAGE_RULES@
+
+AM_LIBS = $(CODE_COVERAGE_LIBS)
+AM_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS)
+AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
