test: Add create_oversize_window
Change-Id: I944046be71b6973e8bd1760678fcfaea39d7bc12
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,6 +56,9 @@ test_mark_write_erased_v2_SOURCES = test/mark_write_erased_v2.c \
 test_bmc_event_ack_v2_SOURCES = test/bmc_event_ack_v2.c \
 				$(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_create_oversize_window_SOURCES = test/create_oversize_window.c \
+				      $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
@@ -69,6 +72,7 @@ check_PROGRAMS = test/sanity \
 		 test/mark_write_dirty_v2 \
 		 test/write_flush_v2 \
 		 test/mark_write_erased_v2 \
-		 test/bmc_event_ack_v2
+		 test/bmc_event_ack_v2 \
+		 test/create_oversize_window
 
 TESTS = $(check_PROGRAMS)
