test: Add implicit_flush
Change-Id: Ib64fe711e7e7922ad90cb8e9a84972df4cbc5b2d
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -60,6 +60,9 @@ test_create_oversize_window_SOURCES = test/create_oversize_window.c \
 test_create_zero_size_window_SOURCES = test/create_zero_size_window.c \
 				       $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_implicit_flush_SOURCES = test/implicit_flush.c \
+			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
@@ -74,6 +77,7 @@ check_PROGRAMS = test/copy_flash \
 		 test/mark_write_erased_v2 \
 		 test/bmc_event_ack_v2 \
 		 test/create_oversize_window \
-		 test/create_zero_size_window
+		 test/create_zero_size_window \
+		 test/implicit_flush
 
 TESTS = $(check_PROGRAMS)
