--- a/Makefile.am
+++ b/Makefile.am
@@ -63,6 +63,9 @@ test_create_zero_size_window_SOURCES = test/create_zero_size_window.c \
 test_implicit_flush_SOURCES = test/implicit_flush.c \
 			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_request_high_version_SOURCES = test/request_high_version.c \
+			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
@@ -78,6 +81,7 @@ check_PROGRAMS = test/copy_flash \
 		 test/bmc_event_ack_v2 \
 		 test/create_oversize_window \
 		 test/create_zero_size_window \
-		 test/implicit_flush
+		 test/implicit_flush \
+		 test/request_high_version
 
 TESTS = $(check_PROGRAMS)
