test: Add request_low_version
Change-Id: Ia2ce45977b2735663e9745e1da72378df5819a01
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -68,6 +68,9 @@ test_implicit_flush_SOURCES = test/implicit_flush.c \
 test_request_high_version_SOURCES = test/request_high_version.c \
 			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_request_low_version_SOURCES = test/request_low_version.c \
+			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
@@ -85,6 +88,7 @@ check_PROGRAMS = test/sanity \
 		 test/create_oversize_window \
 		 test/create_zero_size_window \
 		 test/implicit_flush \
-		 test/request_high_version
+		 test/request_high_version \
+		 test/request_low_version 
 
 TESTS = $(check_PROGRAMS)
