--- a/Makefile.am
+++ b/Makefile.am
@@ -72,6 +72,9 @@ test_request_low_version_SOURCES = test/request_low_version.c \
 test_mark_read_dirty_SOURCES = test/mark_read_dirty.c \
 			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_read_window_write_flush_SOURCES = test/read_window_write_flush.c \
+			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
@@ -90,6 +93,7 @@ check_PROGRAMS = test/copy_flash \
 		 test/implicit_flush \
 		 test/request_high_version \
 		 test/request_low_version \
-		 test/mark_read_dirty 
+		 test/mark_read_dirty \
+		 test/read_window_write_flush
 
 TESTS = $(check_PROGRAMS)
