test: Add read_window_write_flush
Change-Id: I17b237f66e57a40df136d47e2e963eae4c3de535
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,6 +74,9 @@ test_request_low_version_SOURCES = test/request_low_version.c \
 test_mark_read_dirty_SOURCES = test/mark_read_dirty.c \
 			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_read_window_write_flush_SOURCES = test/read_window_write_flush.c \
+			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
@@ -93,6 +96,7 @@ check_PROGRAMS = test/sanity \
 		 test/implicit_flush \
 		 test/request_high_version \
 		 test/request_low_version \
-		 test/mark_read_dirty 
+		 test/mark_read_dirty \
+		 test/read_window_write_flush
 
 TESTS = $(check_PROGRAMS)
