test: Add read_window_mark_write_erased
Change-Id: I40e3e29e8064f7ec156cdfd579071563d1cc35c3
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -75,6 +75,9 @@ test_mark_read_dirty_SOURCES = test/mark_read_dirty.c \
 test_read_window_write_flush_SOURCES = test/read_window_write_flush.c \
 			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_read_window_mark_write_erased_SOURCES = test/read_window_mark_write_erased.c \
+			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
@@ -94,6 +97,7 @@ check_PROGRAMS = test/copy_flash \
 		 test/request_high_version \
 		 test/request_low_version \
 		 test/mark_read_dirty \
-		 test/read_window_write_flush
+		 test/read_window_write_flush \
+		 test/read_window_mark_write_erased
 
 TESTS = $(check_PROGRAMS)
