test: Add write_window_dirty_erase
Change-Id: I16d2488e75dde619da39d755e00666bc24778217
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -78,6 +78,9 @@ test_read_window_write_flush_SOURCES = test/read_window_write_flush.c \
 test_read_window_mark_write_erased_SOURCES = test/read_window_mark_write_erased.c \
 			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_write_window_dirty_erase_SOURCES = test/write_window_dirty_erase.c \
+			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/copy_flash \
 		 test/erase_flash \
 		 test/write_flash \
@@ -98,6 +101,7 @@ check_PROGRAMS = test/copy_flash \
 		 test/request_low_version \
 		 test/mark_read_dirty \
 		 test/read_window_write_flush \
-		 test/read_window_mark_write_erased
+		 test/read_window_mark_write_erased \
+		 test/write_window_dirty_erase
 
 TESTS = $(check_PROGRAMS)
