test: Add invalid_command
Change-Id: I42bc056e5c6b6fdd078bc622e40db39583b53c64
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -83,6 +83,9 @@ test_read_window_mark_write_erased_SOURCES = test/read_window_mark_write_erased.
 test_write_window_dirty_erase_SOURCES = test/write_window_dirty_erase.c \
 			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_invalid_command_SOURCES = test/invalid_command.c \
+			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
@@ -105,6 +108,7 @@ check_PROGRAMS = test/sanity \
 		 test/mark_read_dirty \
 		 test/read_window_write_flush \
 		 test/read_window_mark_write_erased \
-		 test/write_window_dirty_erase
+		 test/write_window_dirty_erase \
+		 test/invalid_command
 
 TESTS = $(check_PROGRAMS)
