test: Add NDEBUG sanity check
Hopefully stops people tripping over themselves if NDEBUG gets defined.

Change-Id: Iafb81d01f6451619f49a5030e5154c8f30ffebdb
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,3 +14,9 @@ mboxctl_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 AM_LIBS = $(CODE_COVERAGE_LIBS)
 AM_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS)
 AM_CFLAGS = $(CODE_COVERAGE_CFLAGS)
+
+test_sanity_SOURCES = test/sanity.c
+
+check_PROGRAMS = test/sanity
+
+TESTS = $(check_PROGRAMS)
