test: Add sequence_numbers
Change-Id: Ida6123bf27445f0fb65099fbf6d9520344d33f10
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/Makefile.am
+++ b/Makefile.am
@@ -89,6 +89,9 @@ test_invalid_command_SOURCES = test/invalid_command.c \
 test_read_window_cycle_SOURCES = test/read_window_cycle.c \
 			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_sequence_numbers_SOURCES = test/sequence_numbers.c \
+			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
@@ -113,6 +116,7 @@ check_PROGRAMS = test/sanity \
 		 test/read_window_mark_write_erased \
 		 test/write_window_dirty_erase \
 		 test/invalid_command \
-		 test/read_window_cycle
+		 test/read_window_cycle \
+		 test/sequence_numbers
 
 TESTS = $(check_PROGRAMS)
