flash: provide "C" interface to partition table
Change-Id: I35af6c4c43e9a43f6a21992bfb0c13542a2c8f0d
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,8 @@ mboxd_SOURCES = \
 	mboxd_msg.c \
 	mboxd_windows.c \
 	mtd.c \
-	mboxd_flash_partition.cpp
+	mboxd_flash_partition.cpp \
+	mboxd_flash_partition_intf.cpp
 
 mboxd_LDFLAGS = $(LIBSYSTEMD_LIBS)
 mboxd_CFLAGS = $(LIBSYSTEMD_CFLAGS)
