flash: provide "C" interface to partition table
Change-Id: I35af6c4c43e9a43f6a21992bfb0c13542a2c8f0d
Signed-off-by: Deepak Kodihalli <dkodihal@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,7 @@ mboxd_SOURCES = \
 	mtd.c
 
 if VIRTUAL_PNOR_ENABLED
-mboxd_SOURCES += mboxd_flash_partition.cpp
+mboxd_SOURCES += mboxd_flash_partition.cpp mboxd_flash_partition_intf.cpp
 endif
 
 mboxd_LDFLAGS = $(LIBSYSTEMD_LIBS) -lstdc++fs
