tests: Add test for timeout argument in GET_MBOX_INFO
Add a test to check the value returned in the suggested timeout
field in the response of GET_MBOX_INFO for a window size >= 1MB.

It is worth noting that existing test cases will continue to pass
since a window size < 1MB will have zero for the suggested timeout
which is what is expected in this field for all existing tests.

Change-Id: I4fb4903817b63a8c201af4142d429b7b21881848
Signed-off-by: Suraj Jitindar Singh <sjitindarsingh@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -92,6 +92,9 @@ test_read_window_cycle_SOURCES = test/read_window_cycle.c \
 test_sequence_numbers_SOURCES = test/sequence_numbers.c \
 			     $(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
 
+test_get_mbox_info_v2_timeout_SOURCES = test/get_mbox_info_v2_timeout.c \
+					$(TEST_MBOX_SRCS) $(TEST_MOCK_SRCS)
+
 check_PROGRAMS = test/sanity \
 		 test/copy_flash \
 		 test/erase_flash \
@@ -117,6 +120,7 @@ check_PROGRAMS = test/sanity \
 		 test/write_window_dirty_erase \
 		 test/invalid_command \
 		 test/read_window_cycle \
-		 test/sequence_numbers
+		 test/sequence_numbers \
+		 test/get_mbox_info_v2_timeout
 
 TESTS = $(check_PROGRAMS)
