--- a/configure.ac
+++ b/configure.ac
@@ -43,6 +43,20 @@ AS_IF([test "x$enable_oe_sdk" == "xyes"],
     AC_SUBST([OESDK_TESTCASE_FLAGS], [$testcase_flags])
 )
 
+AC_ARG_ENABLE([virtual-pnor],
+    AS_HELP_STRING([--enable-virtual-pnor], [Turn on virtual pnor])
+)
+AS_IF([test "x$enable_virtual_pnor" == "xyes"],
+    [
+        AM_CONDITIONAL(VIRTUAL_PNOR_ENABLED, true)
+        AX_APPEND_COMPILE_FLAGS([-DVIRTUAL_PNOR_ENABLED], [CXXFLAGS])
+        AX_APPEND_COMPILE_FLAGS([-DVIRTUAL_PNOR_ENABLED], [CFLAGS])
+    ],
+    [
+        AM_CONDITIONAL(VIRTUAL_PNOR_ENABLED, false)
+    ]
+)
+
 AX_CODE_COVERAGE
 
 PKG_CHECK_MODULES(LIBSYSTEMD, libsystemd, , AC_MSG_ERROR([libsytemd not found]))
