flash: Get the mapped memory info
This class will get the mapped memory info of the
partition file for the requested offset.

Change-Id: Ic2dd0a32acf4a032750aa30c28c01cd8194b1288
Signed-off-by: Ratan Gupta <ratagupt@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,7 @@ mboxd_SOURCES = \
 	mtd.c
 
 if VIRTUAL_PNOR_ENABLED
-mboxd_SOURCES += pnor_partition_table.cpp mboxd_pnor_partition_table.cpp
+mboxd_SOURCES += pnor_partition_table.cpp mboxd_pnor_partition_table.cpp mboxd_memory_map.cpp
 endif
 
 mboxd_LDFLAGS = $(LIBSYSTEMD_LIBS) -lstdc++fs
