Load the partitions into virtual pnor
Resolves openbmc/openbmc#1440

Change-Id: I709c410009fb0047d7e59ddd3a681f25e49341a0
Signed-off-by: Ratan Gupta <ratagupt@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,11 +10,12 @@ mboxd_SOURCES = \
 	mboxd_msg.c \
 	mboxd_windows.c \
 	mtd.c
+
 mboxd_LDFLAGS = $(LIBSYSTEMD_LIBS)
 mboxd_CFLAGS = $(LIBSYSTEMD_CFLAGS)
 
 if VIRTUAL_PNOR_ENABLED
-mboxd_SOURCES += pnor_partition_table.cpp mboxd_pnor_partition_table.cpp mboxd_flash_virtual.c
+mboxd_SOURCES += pnor_partition_table.cpp mboxd_pnor_partition_table.cpp mboxd_flash_virtual.cpp
 mboxd_LDFLAGS += -lstdc++fs
 else
 mboxd_SOURCES += mboxd_flash_physical.c
