Load the partitions into virtual pnor
Resolves openbmc/openbmc#1440

Change-Id: I709c410009fb0047d7e59ddd3a681f25e49341a0
Signed-off-by: Ratan Gupta <ratagupt@in.ibm.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,7 +14,8 @@ mboxd_SOURCES = \
 	mtd.c \
 	mboxd_flash_partition.cpp \
 	mboxd_flash_partition_intf.cpp \
-        mboxd_memory_map.cpp
+        mboxd_memory_map.cpp \
+	mboxd_pnor.cpp
 else
 
 mboxd_SOURCES = \
